minor css fix -will not add scrollbar

--- a/css/profilepage.css
+++ b/css/profilepage.css
@@ -1,3 +1,4 @@
+
 body{
   background-color:black;
   color:#fefefa;
@@ -79,7 +80,7 @@ body{
 #interactMenu{
   margin-top:1em;
   margin-bottom:1em;
-  padding-top:-2em;
+  padding-top:2em;
   position: absolute;
   bottom: 0;
 }
@@ -124,13 +125,6 @@ h3{
   float:left;
   margin-left:5em;
   margin-top:.5em;
-}
-#bannerRight{
-  float: right;
-  margin-right:2em;
-}
-#bannerRight p{
-  color:#D04471;
 }
 
 header{
